@@ -8,6 +8,7 @@ import lombok.Data;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -16,35 +17,32 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class OrderEntity {
     @Id
-    @GeneratedValue()
-    private long id;
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private long orderID;
 
     private LocalDateTime date;
+
     @ManyToOne
     @JoinColumn(name = "client_id")
     private ClientEntity client;
 
-    @OneToMany(cascade = CascadeType.ALL)
+    @OneToMany(mappedBy = "order", cascade = CascadeType.ALL, orphanRemoval = true)
     private List<ItemEntity> items = new ArrayList<>();
 
     public OrderEntity() {
     }
 
     public static OrderEntity fromDomainModel(Order order) {
-        List<ItemEntity> itemEntities = order.getItems().stream()
-                .map(ItemEntity::fromDomainModel)
-                .collect(Collectors.toList());
         OrderEntity orderEntity = new OrderEntity();
-        orderEntity.setId(order.getOrderID());
-        orderEntity.setItems(itemEntities);
+        List<Item> items = order.getItems() != null ? order.getItems() : Collections.emptyList();
+        orderEntity.items = items.stream().map(ItemEntity::fromDomainModel).collect(Collectors.toList());
         orderEntity.setDate(order.getDate());
         return orderEntity;
     }
 
+
     public Order toDomainModel() {
-        List<Item> items = this.getItems().stream()
-                .map(ItemEntity::toDomainModel)
-                .toList();
-        return new Order(this.getId(), this.getDate(), items);
+        List<Item> items = this.getItems().stream().map(ItemEntity::toDomainModel).collect(Collectors.toList());
+        return new Order(this.orderID, this.date, items);
     }
 }
